--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://BukolaF.github.io/loan_website",
+  "homepage": "http://BukolaF.github.io/loan_website",
   "name": "loan-website",
   "version": "0.1.0",
   "private": true,
